css/about-us.css
.main-container {
  box-shadow: 0px 0px 10px 1px #888888;
  border-radius:20px;
  position:relative;
  margin-top: 25px;
  margin-bottom: 25px;
  padding: 20px 20px 20px 20px;

  background-color: #333d47;
  color: white;
}

/* CSS for about-us-home */

.about-us-home-container{
  width: 50%;
  height: 500px;
  margin-right: 25px;
  margin-bottom: 20px;
  overflow: hidden;
  display: flex;
  position: relative;
}

.about-us-home-container .transparent-logo {
  position: absolute;
  opacity: 0.25;
  height: 400px;
  bottom: -100;
  left: -50;
}

.about-us-home-container .intro-container p {
  position: relative;
  height: 290px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.read-more {
  position: relative;
  background-color: #ff5000;
  border:none;
  border-radius:5px;
  color:white;
  text-transform: uppercase;
  padding:10px 30px;
}

.staff-images {
  padding: 0px 40px 0px 40px;
  z-index: 1;
}

.staff-images img {
  height: 150px;
  border-radius: 15px;
  margin-bottom: 10px;
}

.container-format-home {
  box-shadow: 0px 0px 10px 1px #888888;
  border-radius:10px;
  position:relative;
  padding: 20px 20px 20px 20px;
  background-color: white!important;
  color: black!important;
  display: flex;
  overflow: hidden;

}

.testi-logo-home {
    width: 500px;
    margin-right: 10px;
}

/* end for about-us-home */

.staff-container{
  width: 30%;
  margin-left: 50px;
  margin-right: auto;
  background-color: white;
  color: black;

}


.staff-image-container {
  display: flex;
}

.container-flex {
  display: flex;
}

.staff {
  width: 48%;
  padding: 3;
}

.staff img {
  width: 200px;
  border: solid 1px black;
  border-radius: 5px;
}

.staff p {
  text-align: center;
}


/* Media Querys that changes the position of the staff container under 1200px and 991px width. */
@media (max-width: 1200px) {

  .main-container {

  }
  .staff-container {
    width: 40%;
    margin: auto;
    margin-top: 50px;
    margin-bottom: 50px;
    margin-left: 50px;
    height: 650px;
  }
  .staff {
    width: auto;
    padding-right: 18px;
  }
  .staff-image-container {
    display: flex;
    justify-content: center;
  }


  @media (max-width: 991px) {

    .container-flex {
      display: block;

    }
    .staff-container{
      max-width: 960px!important;
      width: 72%;
      height: auto;
      margin-left: auto;
    }
    .about-us-home-container {
      width:100%;
    }



/* Media query that converts the about us section into the mobile version */
    @media (max-width: 767px) {
      .staff-images{
        display: none;
      }
      .about-us-home-container {
        box-shadow: none;
        border-radius: 0px;
        height: 450px;
        margin: 0px;
      }
      .intro-container h1 {
        position: relative;
      }
      .intro-container p {
        height: 170px;
        overflow: hidden;
      }
      .container-flex {
        display: block;
        margin: 0;
        padding-right: 0;
        padding-left: 0;
        max-width: 750px;

      }

